# weixin-agent-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  cdn-upload.md  poll-lifecycle.md
examples/: echo_bot.rs
examples/common/: mod.rs
src/: client.rs  config.rs  error.rs  lib.rs  types.rs
src/api/: client.rs  config_cache.rs  mod.rs  session_guard.rs
src/cdn/: aes_ecb.rs  cdn_upload.rs  download.rs  mod.rs  upload.rs
src/media/: mime.rs  mod.rs
src/messaging/: inbound.rs  mod.rs  send.rs  send_media.rs
src/monitor/: mod.rs  poll_loop.rs
src/qr_login/: login.rs  mod.rs
src/util/: mod.rs  random.rs  redact.rs
